# flask_template

./: .gitattributes  .gitignore  README.md  app.py  dockerfile  pyproject.toml
infra/: .terraform.lock.hcl  main.tf  secrets_enc.tf  variables.tf
