[tool.poetry]
name = "flask_template"
version = "0.1.0"
description = "A template for deploying flask apps with Terraform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

Flask = "~2.2.2"
Flask-SQLAlchemy = "~2.5.1"
gunicorn = "~20.1.0"
PyMySQL = "~1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
